Clarify lab language.

--- a/lab/multiple_predictors.qmd
+++ b/lab/multiple_predictors.qmd
@@ -20,7 +20,7 @@ For the following, we will use the `data(foxes)` (part of rethinking). The urban
 (4) area: Size of the territory
 (5) weight: Body weight of the individual fox
 
-5H2.  Fit a multiple linear regression with weight as the outcome and both area and group size as predictor variables. You can standardize the variables if you wish. Plot the predictions of the model for each predictor, holding the other predictor constant at its mean. Use `tidybayes` and `tidybayes.rethinking` for this with either the `tidy_draws()` function or `linpred_draws()`. What does this model say about the importance of each variable? 
+5H2.  Fit a multiple linear regression with weight as the outcome and both area and group size as predictor variables. You can standardize the variables if you wish. Plot the predictions of the model for each predictor, holding the other predictor constant at its mean. Use `tidybayes` and `tidybayes.rethinking` for this with `linpred_draws()`. What does this model say about the importance of each variable? 
 
 ## Categoricals
 With `data(milk)`, build a model explaing the kcal.per.g of milk with 2 continuous predictors of your choice and clade. Plot the effect of clade controlling for continuous predictors (which you can standardize). If you want to go wild, try and make some of the SLOPES clade specific. Hey, you've got an interaction. Use `tidybayes` and `tidybayes.rethinking` with `linpred_draws()` for this. Can you plot clade-specific effects? (Note, you do not need to do this part - just leaving it there as a challenge and an opportunity.)
